--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
   <dimen name="deal_list_item_image_size">80dp</dimen>
+  <dimen name="dp_24">24dp</dimen>
+  <dimen name="dp_8">8dp</dimen>
+  <dimen name="dp_16">16dp</dimen>
+  <dimen name="sp_18">18sp</dimen>
+  <dimen name="sp_15">15sp</dimen>
+    <dimen name="dp_3">3</dimen>
 </resources>
