--- a/app/src/main/res/layout/fragment_deal_list.xml
+++ b/app/src/main/res/layout/fragment_deal_list.xml
@@ -6,6 +6,10 @@
     <data class="DealListActivityBinding">
 
         <variable
+            name="eventHandler"
+            type="com.target.targetcasestudy.ui.deallist.DealListFragment" />
+
+        <variable
             name="viewModel"
             type="com.target.targetcasestudy.ui.deallist.DealListViewModel" />
     </data>
@@ -18,15 +22,14 @@
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_to_refresh"
-            tools:visibility="visible"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="@{viewModel.dealListVisibility}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            >
+            tools:visibility="visible">
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
@@ -46,8 +49,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:visibility="gone"
-            >
+            tools:visibility="gone">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:layout_width="wrap_content"
@@ -86,8 +88,8 @@
             android:layout_margin="@dimen/dp_16"
             android:background="@drawable/retry_button_round_bg"
             android:fontFamily="sans-serif-medium"
+            android:onClick="@{(view) -> eventHandler.onRetryClicked()}"
             android:text="@string/retry"
-            android:onClick="onRetryClicked"
             android:textColor="@color/color_green"
             android:textSize="@dimen/sp_15"
             android:visibility="@{viewModel.errorRetryVisibility}"
