--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
   <color name="red_color">#cc0000</color>
   <color name="color_green">#31B057</color>
   <color name="color_grey">#929292</color>
+  <color name="color_txt">#000000</color>
+  <color name="white_color">#FFFFFF</color>
 </resources>
