--- a/app/src/main/res/layout/deal_list_item.xml
+++ b/app/src/main/res/layout/deal_list_item.xml
@@ -4,6 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data class="DealItemBinding">
+        <variable
+            name="eventHandler"
+            type="com.target.targetcasestudy.ui.deallist.DealListFragment" />
 
         <variable
             name="viewModel"
@@ -13,6 +16,7 @@
 
     <LinearLayout
         android:id="@+id/root_layout"
+        android:onClick="@{(view) -> eventHandler.onDealsClicked(viewModel)}"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -34,7 +38,7 @@
                     android:layout_width="@dimen/deal_list_item_image_size"
                     android:layout_height="@dimen/deal_list_item_image_size"
                     android:src="@drawable/ic_launcher_foreground"
-                    app:repoAvatarUrl="@{viewModel.imageUrl}" />
+                    app:productAvatarUrl="@{viewModel.imageUrl}" />
             </LinearLayout>
 
             <LinearLayout
