--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
   <dimen name="sp_18">18sp</dimen>
   <dimen name="sp_15">15sp</dimen>
     <dimen name="dp_3">3</dimen>
+    <dimen name="sp_16">16sp</dimen>
 </resources>
