--- a/app/src/main/res/layout/fragment_deal_item.xml
+++ b/app/src/main/res/layout/fragment_deal_item.xml
@@ -15,7 +15,7 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/white_color"
+        android:background="@color/color_white"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,7 +33,7 @@
                 <ImageView
                     android:id="@+id/product_image"
                     android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_height="@dimen/dp_0"
                     android:layout_centerVertical="true"
                     android:src="@drawable/ic_launcher_foreground"
                     app:layout_constraintBottom_toTopOf="@id/content_container"
@@ -59,21 +59,18 @@
                             android:id="@+id/item_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            style="@style/RedColorTextLargeBold"
                             android:layout_alignParentStart="true"
                             android:text="@{viewModel.dealListItemModel.salePriceDisplayString}"
-                            android:textColor="@color/red_color"
-                            android:textSize="@dimen/sp_18"
-                            android:textStyle="bold"
                             tools:text="$ 80" />
 
                         <TextView
+                            style="@style/BlackColorTextMedium"
                             android:id="@+id/item_reg_price"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentEnd="true"
                             app:regularPriceText="@{viewModel.dealListItemModel.regularPriceDisplayString}"
-                            android:textColor="@color/color_txt"
-                            android:textSize="@dimen/sp_16"
                             tools:text="Reg:$17.99" />
 
                     </RelativeLayout>
@@ -83,17 +80,16 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@{viewModel.dealListItemModel.title}"
-                        android:textColor="@color/color_txt"
-                        android:textStyle="bold"
-                        android:textSize="@dimen/sp_18" />
+                        style="@style/GreyColorTextMedium"
+                         />
 
                     <TextView
                         android:id="@+id/item_description"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        style="@style/BlackColorTextMedium"
                         android:text="@{viewModel.dealListItemModel.description}"
-                        android:textColor="@color/color_txt"
-                        android:textSize="@dimen/sp_16" />
+                         />
                 </LinearLayout>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
@@ -113,23 +109,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@android:color/darker_gray"
-                android:fontFamily="sans-serif-medium"
+                style="@style/BlackButtonStylePrimary"
                 android:text="@string/add_to_list"
                 android:onClick="@{(view) -> eventHandler.onBackClicked()}"
-                android:textColor="@color/gray_color"
-                android:textSize="@dimen/sp_15" />
+               />
 
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@color/colorPrimary"
-                android:fontFamily="sans-serif-medium"
+                style="@style/WhiteButtonStylePrimary"
                 android:text="@string/add_to_cart"
                 android:onClick="@{(view) -> eventHandler.onBackClicked()}"
-                android:textColor="@color/white_color"
-                android:textSize="@dimen/sp_15" />
+                />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
