--- a/app/src/main/res/layout/fragment_deal_list.xml
+++ b/app/src/main/res/layout/fragment_deal_list.xml
@@ -22,8 +22,8 @@
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
             android:id="@+id/swipe_to_refresh"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="@dimen/dp_0"
             android:visibility="@{viewModel.dealListVisibility}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,8 +33,8 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recycler_view"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="@dimen/dp_0"
+                android:layout_height="@dimen/dp_0"
                 android:visibility="@{viewModel.dealListVisibility}"
                 tools:visibility="gone" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -60,38 +60,32 @@
                 app:srcCompat="@drawable/ic_no_internet_connection" />
 
             <TextView
+                style="@style/GreyDarkColorTextLargeBold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/dp_8"
-                android:fontFamily="sans-serif"
                 android:gravity="center"
                 android:text="@string/something_went_wrong"
-                android:textColor="#4A4A4A"
-                android:textSize="@dimen/sp_18"
-                android:textStyle="bold" />
+                />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                style="@style/GreyColorTextMedium"
                 android:layout_gravity="center"
-                android:fontFamily="sans-serif"
                 android:text="@string/an_alien_is_probably_blocking_your_signal"
-                android:textColor="@color/color_grey"
-                android:textSize="@dimen/sp_15" />
+                 />
         </LinearLayout>
 
         <Button
             android:id="@+id/retry_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            style="@style/RetryButtonStyle"
             android:layout_margin="@dimen/dp_16"
-            android:background="@drawable/retry_button_round_bg"
-            android:fontFamily="sans-serif-medium"
             android:onClick="@{(view) -> eventHandler.onRetryClicked()}"
             android:text="@string/retry"
-            android:textColor="@color/color_green"
-            android:textSize="@dimen/sp_15"
             android:visibility="@{viewModel.errorRetryVisibility}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
