--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
   <dimen name="sp_15">15sp</dimen>
     <dimen name="dp_3">3</dimen>
     <dimen name="sp_16">16sp</dimen>
+    <dimen name="dp_0">0dp</dimen>
+  <dimen name="dp_1">1dp</dimen>
 </resources>
